<!--
  ~ Copyright (c) 2017 Arthur Antunes.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
  <string name="app_name">Popular Movies</string>

  <!-- Main -->
  <string name="action_filter">Filter</string>
  <string name="action_sort_by_most_popular">Popular</string>
  <string name="action_sort_by_top_rated">Rated</string>
  <string name="action_sort_by_favorites">Favorites</string>
  <string name="gallery_retry_button_text">Retry</string>
  <string name="gallery_retry_toast_text">Please try again!</string>
  <string name="gallery_empty_state_not_connection_text">Not Internet connection!</string>
  <string name="gallery_empty_state_generic_error_text">Oops, something went wrong!</string>
  <string name="gallery_movie_poster_content_description">Movie poster</string>

  <!-- MovieDetails -->
  <string name="movie_details_activity_title">Movie Details</string>
  <string name="movie_details_poster_content_description">Movie poster</string>
  <string name="movie_details_overview_header_text">Overview</string>
  <string name="movie_details_trailers_header_text">Trailers</string>
  <string name="movie_details_trailer_text">Trailer %1$d</string>
  <string name="movie_details_play_trailer_video_description">play trailer video</string>
  <string name="movie_details_reviews_header_text">Reviews</string>
  <string name="movie_details_trailers_empty_state_message">¡Trailers not available!</string>
  <string name="movie_details_reviews_empty_state_message">¡Reviews not available!</string>
  <string name="movie_details_movie_deleted_from_favorites_message">Delete from Favorites</string>
  <string name="movie_details_movie_saved_into_favorites_message">Saved into Favorites</string>
</resources>
