<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 Arthur Antunes.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary_light"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.arthurantunes.popularmovies.details.MovieDetailsActivity"
    tools:showIn="@layout/activity_movie_details">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/movie_details_overview_header_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        tools:text="Overview"/>

    <TextView
        android:id="@+id/movie_detail_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="16dp"
        android:lineSpacingExtra="4sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/primary_text"
        tools:text="Text text text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/movie_details_trailers_header_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        tools:text="Trailers"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp">

      <android.support.v7.widget.RecyclerView
          android:id="@+id/movie_detail_trailers_recycler_view"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:visibility="visible"/>

      <TextView
          android:id="@+id/movie_detail_trailers_recycler_view_empty_state"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:lineSpacingExtra="4sp"
          android:maxLines="1"
          android:text="@string/movie_details_trailers_empty_state_message"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1"
          android:textColor="@color/primary_text"
          android:textStyle="bold"
          android:visibility="gone"
          tools:text="¡Trailers not available!"/>
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/movie_details_reviews_header_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        tools:text="Reviews"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp">

      <android.support.v7.widget.RecyclerView
          android:id="@+id/movie_detail_reviews_recycler_view"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:visibility="visible"/>

      <TextView
          android:id="@+id/movie_detail_reviews_recycler_view_empty_state"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:lineSpacingExtra="4sp"
          android:maxLines="1"
          android:text="@string/movie_details_reviews_empty_state_message"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1"
          android:textColor="@color/primary_text"
          android:textStyle="bold"
          android:visibility="gone"/>
    </FrameLayout>

  </LinearLayout>
</android.support.v4.widget.NestedScrollView>
